Fixing sprite alignment

--- a/kifi-backend/modules/shoebox/angular/src/common/build-css/sprites.styl
+++ b/kifi-backend/modules/shoebox/angular/src/common/build-css/sprites.styl
@@ -340,19 +340,19 @@ sprite($sprite) {
 }
 
 spriteWidth2x($sprite) {
-  width: ceil(($sprite[4]/2));
+  width: ceil((($sprite[4] + 1)/2));
 }
 
 spriteHeight2x($sprite) {
-  height: ceil(($sprite[5]/2));
+  height: ceil((($sprite[5] + 1)/2));
 }
 
 spritePosition2x($sprite) {
-  background-position: floor(($sprite[2]/2)) floor(($sprite[3]/2));
+  background-position: ceil(($sprite[2]/2)) ceil(($sprite[3]/2));
 }
 
 spriteBackgroundSize2x($sprite) {
-  background-size: floor(($sprite[6]/2)) floor(($sprite[7]/2));
+  background-size: ceil(($sprite[6]/2)) ceil(($sprite[7]/2));
 }
 
 sprite2x($sprite) {
